tests/build/cases/ui_node/delegate_expr_no_children_field.rs
use zero_ui::core::{ui_node, UiNode};

struct Node {}

#[ui_node(children)]
impl UiNode for Node {}

fn main() {}
